# appleBoxGame

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  strategyDFS.py  strategyQUBO.py  test.py
data/: problem0.txt  problem1.txt
src/: config.py
src/algorithms/: dfs_solver.py  qubo_solver.py
src/interfaces/: file_interface.py  gui_interface.py
src/models/: box.py
src/utils/: grid_utils.py  logger.py
