[project]
name = "appleBoxGameSolver"
version = "0.1.0"
description = "A tool for solving and automating the Fruit Box Game"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.11.0.86",
    "pyautogui>=0.9.54",
    "numpy>=1.25.0",
    "dimod>=0.12.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
appleBoxGameSolver = "main:main"
